--- a/public/themes/control/assets/css/style.default.css
+++ b/public/themes/control/assets/css/style.default.css
@@ -10,6 +10,9 @@ div[contenteditable=true]{border:1px solid #dadada;padding:10px;}
 #status{width:30px;height:30px;position:absolute;left:50%;top:50%;margin:-15px 0 0 -15px;font-size:32px;}
 #preloaderInBox{position:absolute;top:0;left:0;width:100%;height:100%;background-color:#e4e7ea;z-index:10000;opacity:0.8;}
 .notificationLimit{position:absolute;top:0;left:0;width:100%;height:100%;background-color:#e4e7ea;z-index:10;opacity:0.8;}
+/*-- New --*/
+.form-title{border-bottom: dashed 1px #dadada !important;}
+/*-- End New --*/
 .notificationLimit .content{}
 .headerbar{border-left:1px solid #eee;background:#fff;}
 .headerbar::after{clear:both;display:block;content:'';}
