--- a/public/themes/default/assets/css/style.default.css
+++ b/public/themes/default/assets/css/style.default.css
@@ -29,7 +29,7 @@ div[contenteditable=true]{border:1px solid #dadada;padding:10px;}
 .headermenu{list-style:none;margin:0;padding:0;}
 .headermenu:after{clear:both;display:block;content:'';}
 .headermenu > li{display:inline-block;float:left;border-left:1px solid #eee;position:relative;}
-.headermenu .dropdown-toggle{padding:12px 10px;border-color:#fff;background:#fff;-moz-border-radius:0;-webkit-border-radius:0;border-radius:0;border:0;}
+.headermenu .dropdown-toggle{padding:15px 10px;border-color:#fff;background:#fff;-moz-border-radius:0;-webkit-border-radius:0;border-radius:0;border:0;}
 .headermenu .dropdown-toggle:hover,
 .headermenu .dropdown-toggle:focus,
 .headermenu .dropdown-toggle:active,
@@ -138,7 +138,11 @@ form .form-group:last-child{}
 .row-pad-5{margin-left:-5px;margin-right:-5px;}
 .row-pad-5 [class*="col-lg"],
 .row-pad-5 [class*="col-md"],
-.row-pad-5 [class*="col-sm"]{padding-left:5px;padding-right:5px;margin-bottom:10px;}
+.row-pad-5 [class*="col-sm"]{padding-left:5px;padding-right:5px;margin-bottom:5px;}
+.row-pad-0{margin-left:0px;margin-right:0px;}
+.row-pad-0 [class*="col-lg"],
+.row-pad-0 [class*="col-md"],
+.row-pad-0 [class*="col-sm"]{padding-left:5px;padding-right:5px;margin-bottom:10px;}
 .subtitle{font-size:13px;text-transform:uppercase;color:#333;margin-bottom:15px;margin-top:0;}
 .subtitle-lined{border-bottom:1px dotted #ddd;padding-bottom:5px;}
 p{margin-bottom:10px;}
@@ -661,7 +665,7 @@ div.error label.error:before{font-family:'Glyphicons Halflings';content:'\e101';
 .headerbar .topnav > ul > li .dropdown-menu > li > a:hover{background:#1CAF9A;color:#fff;}
 .headerbar .topnav > ul > li .dropdown-menu i{display:none;}
 .fixed{background:#c9cccf;}
-section{margin:auto;margin-bottom:5px;max-width:1170px;position:relative;background:#3b587f;}
+section{margin:auto;max-width:1170px;position:relative;background:#3b587f;}
 .fixed .rightpanel{background:#1D2939;}
 .fixed-noleft .leftpanel{display:none;}
 .fixed-noleft .mainpanel{margin-left:0;}
@@ -943,7 +947,8 @@ section{margin:auto;margin-bottom:5px;max-width:1170px;position:relative;backgro
 .listPost{min-height:110px;}
 .postMediaXs{max-width:90px;}
 .fileMedia li{width:120px;height:90px;float:left;display:block;margin:0px 5px 5px 0px;position:relative;}
-.image-wapper{border:1px solid #ccc;background:#f9f9f9;position: relative;overflow: hidden;} .image-wapper .image-wapper-label{text-align:center;margin-top:20px;color:#1c60a7} .image-wapper .image-wapper-take{text-align:center;margin-top:10px} .image-wapper .image-wapper-take .jfu-btn-upload{width:100%;height:100%;background-color:#f9f9f9;border:none;cursor:pointer}.camera-add-image{color:#ebebeb;font-size:70px}.plus-add-image{position:absolute;top:-22px;left:27px;font-size:25px;color:#5bc3e9} .image-wapper .image-wapper-des{text-align:center;margin-top:10px;line-height:20px;color:#555}.jfu-input-file{position:absolute;top:0;right:0;margin:0;opacity:0;filter:alpha(opacity=0);font-size:23px;direction:ltr;cursor:pointer;min-width:100%;min-height:100%}
+.image-wapper{border:1px solid #ccc;background:#f9f9f9;position: relative;overflow: hidden;} .image-wapper .image-wapper-label{text-align:center;margin-top:5px;color:#1c60a7} .image-wapper .image-wapper-take{text-align:center;} .image-wapper .image-wapper-take .jfu-btn-upload{width:100%;height:100%;background-color:#f9f9f9;border:none;cursor:pointer} .image-wapper .camera-add-image{color:#418aca;font-size:30px}.image-wapper .plus-add-image{position:absolute;top:-4px;left:10px;font-size:14px;color:#fff} .image-wapper .image-wapper-des{text-align:center;margin-top:10px;line-height:20px;color:#555}.jfu-input-file{position:absolute;top:0;right:0;margin:0;opacity:0;filter:alpha(opacity=0);font-size:23px;direction:ltr;cursor:pointer;min-width:100%;min-height:100%}
+.image-wapper-url{border:1px solid #ccc;background:#f9f9f9;position: relative;overflow: hidden;cursor:pointer;} .image-wapper-url .image-wapper-label{text-align:center;margin-top:5px;color:#1c60a7} .image-wapper-url .image-wapper-take{text-align:center;} .image-wapper-url .camera-add-image{color:#418aca;font-size:30px}
 .channel-thumb{max-width:30px;margin-right:5px;}
 .appendpricing .btn{text-align:left;}
 .footerFixel{position:fixed; width:100%; bottom:0px;z-index:1000;}
